@@ -46,10 +46,7 @@ VrmlNamespace.cpp VrmlNodeType.cpp VrmlNodePtr.cpp Route.cpp \
 VrmlNodeVisitor.cpp VrmlNode.cpp VrmlNodeProto.cpp ScriptObject.cpp \
 VrmlNodeScript.cpp VrmlScene.cpp vrml97node.cpp
 
-antlr-prelinked.lo: Vrml97Parser.lo $(top_builddir)/lib/antlr/libantlr.la
-	$(CXXLINK) $^
-
-libopenvrml_la_LIBADD = antlr-prelinked.lo
+libopenvrml_la_LIBADD = Vrml97Parser.lo $(top_builddir)/lib/antlr/libantlr.la
 
 OpenVRMLincludedir = $(includedir)/OpenVRML
 OpenVRMLinclude_HEADERS = common.h Audio.h Doc.h Image.h MathUtils.h Route.h \
@@ -58,7 +55,7 @@ VrmlEvent.h VrmlFrustum.h field.h VrmlNamespace.h VrmlNodePtr.h VrmlNode.h \
 VrmlNodeScript.h VrmlNodeType.h vrml97node.h VrmlRenderContext.h VrmlScene.h \
 doc2.hpp
 
-noinst_HEADERS = Vrml97Parser.hpp Vrml97ParserTokenTypes.hpp sound.h
+noinst_HEADERS = Vrml97Parser.hpp Vrml97ParserTokenTypes.hpp private.h sound.h
 
 EXTRA_DIST = Vrml97TokenTypes.txt Vrml97Parser.cpp Vrml97Parser.hpp \
 Vrml97ParserTokenTypes.txt Vrml97Parser.g ScriptJS.cpp
